samples/_failures_safe/1761004748_74b7d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c1766a7.c: In function ‘main’:
./samples/SAFE/__tmp_4c1766a7.c:165:9: error: expected declaration or statement at end of input
  165 |         }
      |         ^
./samples/SAFE/__tmp_4c1766a7.c:165:9: error: expected declaration or statement at end of input
